# rating_generator

./: .env  .gitignore  Cargo.toml  README.md  justfile
.sqlx/: query-5fb2a9e0df9030995fcdda8e35ebd3753a055cf3ec0e5832d15e25a6e1d980eb.json  query-e6254dbcfc38b83da9c9a43576f78975b717606f73e958a9739946f86804e614.json
src/: config.rs  db.rs  lib.rs  main.rs  refresh.rs
src/postgres/: db.rs
